--- a/trunk/src/bindings/SConscript
+++ b/trunk/src/bindings/SConscript
@@ -1,21 +1,17 @@
 Import('env')
 
-
-env.Tool('mcs', toolpath = [''])
-
-refpaths = []
-
-refs = Split("""
-  System
-  System.Net
-  """)
+refpaths = ['.']
 
 sources = Split("""
   EthernetDevice.cs
   EthernetFrame.cs
   """)
 
-r = env.CLIRefs(refpaths, refs)
-lib = env.CLILibrary('TAPCfg', sources, ASSEMBLYREFS=r)
-env.AddToRefPaths(lib)
+lib = env.CLILibrary('TAPCfg', sources)
+
+sources = Split("""
+  TAPCfgTest.cs
+  """)
+
+prog = env.CLIProgram('TAPCfgTest', sources, CILLIBS=lib)
 
