--- a/trunk/src/SConscript
+++ b/trunk/src/SConscript
@@ -5,6 +5,7 @@ env.Append(CPPPATH = ['include'])
 libenv = env.Clone()
 conf = Configure(libenv)
 conf.CheckLib('ws2_32')
+conf.CheckLib('socket')
 libenv = conf.Finish()
 libenv.Append(CPPPATH = ['lib'])
 
@@ -19,6 +20,7 @@ demoenv = env.Clone()
 conf = Configure(demoenv)
 conf.CheckLib('pthread')
 conf.CheckLib('ws2_32')
+conf.CheckLib('socket')
 demoenv = conf.Finish()
 demoenv.Append(LIBPATH = ['lib'])
 demoenv.Prepend(LIBS = ['tapcfg'])
