--- a/trunk/src/SConscript
+++ b/trunk/src/SConscript
@@ -20,7 +20,7 @@ libenv.Library('lib/tapcfg', libobj, install=False)
 libenv.SharedLibrary('bindings/tapcfg', shlibobj, install=False)
 
 # Compile the .Net bindings
-asm = env.CLILibrary('bindings/TAP', ['bindings/EthernetDevice.cs','bindings/EthernetFrame.cs','bindings/UTF8Marshaler.cs'])
+asm = env.CLILibrary('bindings/TAP', ['bindings/EthernetDevice.cs','bindings/EthernetFrame.cs','bindings/UTF8Marshaler.cs','bindings/IPv6Packet.cs','bindings/ProtocolType.cs'])
 prog = env.CLIProgram('bindings/TAPCfgTest', ['bindings/TAPCfgTest.cs'], CILLIBS=asm)
 
 # Set up the environment for compiling the demo tests
