--- a/trunk/src/SConscript
+++ b/trunk/src/SConscript
@@ -20,8 +20,8 @@ libenv.Library('lib/tapcfg', libobj, install=False)
 libenv.SharedLibrary('bindings/tapcfg', shlibobj, install=False)
 
 # Compile the .Net bindings
-asm = env.CLILibrary('bindings/TAP', ['bindings/EthernetDevice.cs','bindings/EthernetFrame.cs','bindings/UTF8Marshaler.cs','bindings/IPv4.cs','bindings/IPv6.cs','bindings/ProtocolType.cs','bindings/NeighborDiscovery.cs'])
-prog = env.CLIProgram('bindings/TAPCfgTest', ['bindings/TAPCfgTest.cs'], CILLIBS=asm)
+asm = env.CLILibrary('bindings/TAP', ['bindings/EthernetDevice.cs','bindings/EthernetFrame.cs','bindings/UTF8Marshaler.cs'])
+prog = env.CLIProgram('bindings/TAPCfgTest', ['bindings/TAPCfgTest.cs','bindings/IPv4.cs','bindings/IPv6.cs','bindings/ProtocolType.cs','bindings/NeighborDiscovery.cs'], CILLIBS=asm)
 
 # Set up the environment for compiling the demo tests
 appenv = env.Clone()
