--- a/trunk/src/SConscript
+++ b/trunk/src/SConscript
@@ -17,11 +17,11 @@ else:
 # Compile the static library into lib directory and shared library
 # for the bindings
 libenv.Library('lib/tapcfg', libobj, install=False)
-libenv.SharedLibrary('bindings/tapcfg', shlibobj, install=False)
+libenv.SharedLibrary('../build/tapcfg', shlibobj, install=False)
 
 # Compile the .Net bindings
-asm = env.CLILibrary('bindings/TAP', ['bindings/EthernetDevice.cs','bindings/EthernetFrame.cs','bindings/UTF8Marshaler.cs'])
-prog = env.CLIProgram('bindings/TAPCfgTest', ['bindings/TAPCfgTest.cs','bindings/IPv4.cs','bindings/IPv6.cs','bindings/ProtocolType.cs','bindings/NeighborDiscovery.cs'], CILLIBS=asm)
+asm = env.CLILibrary('../build/TAP', ['bindings/EthernetDevice.cs','bindings/EthernetFrame.cs','bindings/UTF8Marshaler.cs'])
+prog = env.CLIProgram('../build/TAPCfgTest', ['demos/TAPCfgTest.cs','demos/IPv4.cs','demos/IPv6.cs','demos/ProtocolType.cs','demos/NeighborDiscovery.cs'], CILLIBS=asm)
 
 # Set up the environment for compiling the demo tests
 appenv = env.Clone()
@@ -32,5 +32,5 @@ appenv.Append(LIBPATH = ['lib'])
 appenv.Prepend(LIBS = ['tapcfg'])
 
 # Compile the daemon for testing
-appenv.Program('daemon/tapserver', ['daemon/tapserver.c','daemon/main.c'], install=False)
+appenv.Program('../build/tapserver', ['daemon/tapserver.c','daemon/main.c'], install=False)
 
