--- a/trunk/src/SConscript
+++ b/trunk/src/SConscript
@@ -32,6 +32,6 @@ appenv.Prepend(LIBS = ['tapcfg'])
 
 # Compile the daemon for testing
 daemonobj = libenv.Object(['daemon/tapserver.c','daemon/serversock.c'])
-appenv.Program('../build/serverdemo', [daemonobj,'daemon/serverdemo.c'], install=False)
+appenv.Program('../build/tapcfgdemo', [daemonobj,'daemon/tapcfgdemo.c'], install=False)
 appenv.Program('../build/tapcfgd', [daemonobj,'daemon/daemon.c','daemon/main.c'], install=False)
 
