--- a/trunk/src/SConscript
+++ b/trunk/src/SConscript
@@ -22,20 +22,22 @@ libenv.SharedLibrary('tapcfg', shlibobj, install=False)
 if GetOption('universal'):
 	libenv["ENV"]["MACOSX_DEPLOYMENT_TARGET"] = "10.4"
 	libenv.Append(CFLAGS = ['-arch', 'ppc', '-arch', 'i386', '-arch', 'ppc64', '-arch', 'x86_64'])
-	libenv32_ppc = libenv.Clone()
-	libenv32_x86 = libenv.Clone()
-	libenv64_ppc = libenv.Clone()
-	libenv64_x86 = libenv.Clone()
+	libenv32 = libenv.Clone()
+	libenv64 = libenv.Clone()
 
-	libenv32_ppc.Append(LINKFLAGS = ['-undefined', 'dynamic_lookup', '-arch', 'ppc'])
-	libenv32_ppc.SharedLibrary('tapcfg32_ppc', shlibobj, install=False)
-	libenv32_x86.Append(LINKFLAGS = ['-undefined', 'dynamic_lookup', '-arch', 'i386'])
-	libenv32_x86.SharedLibrary('tapcfg32_i386', shlibobj, install=False)
+	libenv32.Append(LINKFLAGS = ['-undefined', 'dynamic_lookup'])
+	libenv32.Append(LINKFLAGS = ['-arch', 'ppc', '-arch', 'i386'])
+	libenv32.Append(LINKFLAGS = ['-install_name', 'libtapcfg32.dylib'])
+	libenv32.SharedLibrary('tapcfg32', shlibobj, install=False)
 
-	libenv64_ppc.Append(LINKFLAGS = ['-undefined', 'dynamic_lookup', '-arch', 'ppc64'])
-	libenv64_ppc.SharedLibrary('tapcfg64_ppc', shlibobj, install=False)
-	libenv64_x86.Append(LINKFLAGS = ['-undefined', 'dynamic_lookup', '-arch', 'x86_64'])
-	libenv64_x86.SharedLibrary('tapcfg64_i386', shlibobj, install=False)
+	libenv64.Append(LINKFLAGS = ['-undefined', 'dynamic_lookup'])
+	libenv64.Append(LINKFLAGS = ['-arch', 'ppc64', '-arch', 'x86_64'])
+	libenv64.Append(LINKFLAGS = ['-install_name', 'libtapcfg64.dylib'])
+	libenv64.SharedLibrary('tapcfg64', shlibobj, install=False)
+
+	libenv.Append(LINKFLAGS = ['-undefined', 'dynamic_lookup'])
+	libenv.Append(LINKFLAGS = ['-arch', 'ppc', '-arch', 'i386', '-arch', 'ppc64', '-arch', 'x86_64'])
+	libenv.Append(LINKFLAGS = ['-install_name', 'libtapcfg.dylib'])
 
 # Compile the .Net bindings
 if env.Detect('gmcs'):
