--- a/trunk/drivers/osx/tuntap/src/tap/Makefile
+++ b/trunk/drivers/osx/tuntap/src/tap/Makefile
@@ -6,7 +6,7 @@
 # (c) 2004, 2005, 2006, 2007, 2008 Mattias Nissler
 #
 
-OBJS = ../tuntap.o ../tuntap_mgr.o ../lock.o kmod.o tap.o
+OBJS = ../tuntap.o ../tuntap_mgr.o ../lock.o ../mem.o kmod.o tap.o
 KMOD_BIN = tap
 BUNDLE_DIR = ../..
 BUNDLE_NAME = tap.kext
@@ -19,17 +19,13 @@ BUNDLE_SIGNATURE = ????
 BUNDLE_PACKAGETYPE = KEXT
 BUNDLE_VERSION = $(TAP_KEXT_VERSION)
 
-INCLUDE = -I.. \
-	-I/System/Library/Frameworks/Kernel.framework/Headers \
-	-I/System/Library/Frameworks/Kernel.framework/Headers/bsd
-CFLAGS = -static -nostdinc -Wall -msoft-float -mlong-branch -force_cpusubtype_ALL -fno-builtin \
-	-arch ppc -arch i386 -isysroot /Developer/SDKs/MacOSX10.4u.sdk/ \
+INCLUDE = -I.. -I/System/Library/Frameworks/Kernel.framework/Headers
+CFLAGS = -Wall -mkernel -force_cpusubtype_ALL \
+	-fno-builtin -fno-stack-protector -arch ppc -arch i386 -arch x86_64 \
 	-DKERNEL -D__APPLE__ -DKERNEL_PRIVATE -DTUNTAP_VERSION=\"$(TUNTAP_VERSION)\" \
 	-DTAP_KEXT_VERSION=\"$(TAP_KEXT_VERSION)\"
-CCFLAGS = $(CFLAGS) -nostdinc++ -fapple-kext -fno-exceptions -fno-rtti
-LDFLAGS = -static -Wall -nostdlib -r -lcc_kext \
-	-arch ppc -arch i386 -isysroot /Developer/SDKs/MacOSX10.4u.sdk/
-
+CCFLAGS = $(CFLAGS)
+LDFLAGS = -Wall -mkernel -nostdlib -r -lcc_kext -arch ppc -arch i386 -arch x86_64 -Xlinker -kext
 
 CCP = g++
 CC = gcc
